--- a/ANDROID/app/src/main/res/menu/menu_main.xml
+++ b/ANDROID/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tamuhack.tamuhackairlines.MainActivity" >
+    <item android:id="@+id/action_login"
+        android:title="@string/action_login"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="175"
         app:showAsAction="never" />
 </menu>
