--- a/ANDROID/app/src/main/res/menu/menu_main.xml
+++ b/ANDROID/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,10 @@
         android:title="@string/action_login"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_signup"
+        android:title="@string/action_signup"
+        android:orderInCategory="125"
+        app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="175"
