Upbring, Got all devices done.
We got the app fully functional. Now working on integrating better UI/UX, then working on custom notifications.

--- a/ANDROID-FRONTEND/app/src/main/res/menu/menu_main.xml
+++ b/ANDROID-FRONTEND/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,10 @@
         android:title="@string/action_signup"
         android:orderInCategory="125"
         app:showAsAction="never" />
+    <item android:id="@+id/action_device_adder"
+        android:title="Add Devices"
+        android:orderInCategory="145"
+        app:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="175"
